# MarkdownX

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
docs/: CODING_RULE.md  PRD.md  TASKS.md  TECH_DESIGN.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/commands/: file.rs  mod.rs  search.rs  tree.rs  watch.rs
src/components/: ErrorBoundary.tsx
src/components/dialogs/: CommandPalette.tsx  ConfirmDialog.tsx  SearchDialog.tsx  SettingsDialog.tsx  Toast.tsx
src/components/editor/: BlockView.tsx  Divider.tsx  Editor.tsx  InlineRenderer.tsx  MarkdownEditor.tsx  VirtualBlockList.tsx
src/components/layout/: Layout.tsx
src/components/sidebar/: FileTree.tsx  Sidebar.tsx  SidebarSearch.tsx  WorkspaceHeader.tsx
src/components/statusbar/: StatusBar.tsx
src/components/toolbar/: Toolbar.tsx
src/hooks/: use-auto-save.ts  use-dnd.ts  use-editor.ts  use-file-actions.ts  use-file-watcher.ts  use-global-hotkeys.ts
src/services/: auto-save-service.ts  command-service.ts  editor-service.ts  file-open-service.ts  file-service.ts  import-service.ts  markdown-service.ts  search-service.ts  tauri.ts  workspace-service.ts
src/store/: editor-store.ts  setting-store.ts  ui-store.ts  workspace-store.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: id.ts  logger.ts
